--- a/wrangler.toml
+++ b/wrangler.toml
@@ -11,7 +11,7 @@ name = "katelyatv"
 [[env.production.d1_databases]]
 binding = "DB"
 database_name = "katelyatv-db"
-database_id = "6d580637-1f87-4ddf-8b4d-3d97254b4c33"
+database_id = "2a196a9e-ade8-4523-8127-f549df1521ee"
 
 # 生产环境变量
 [env.production.vars]
@@ -38,7 +38,7 @@ name = "katelyatv-preview"
 [[env.preview.d1_databases]]
 binding = "DB"
 database_name = "katelyatv-db"
-database_id = "3e1d855b-de1d-40da-a72e-521311110e44"
+database_id = "2a196a9e-ade8-4523-8127-f549df1521ee"
 
 # 预览环境变量
 [env.preview.vars]
@@ -47,3 +47,8 @@ NEXT_PUBLIC_SITE_NAME = "KatelyaTV"
 NEXT_PUBLIC_SITE_DESCRIPTION = "高性能影视播放平台"
 IMAGE_PROXY_ENABLED = "true"
 NODE_ENV = "production"
+
+[[d1_databases]]
+binding = "katelyatv_db"
+database_name = "katelyatv-db"
+database_id = "2a196a9e-ade8-4523-8127-f549df1521ee"
