--- a/wrangler.toml
+++ b/wrangler.toml
@@ -18,7 +18,8 @@ database_id = "2a196a9e-ade8-4523-8127-f549df1521ee"
 NEXT_PUBLIC_STORAGE_TYPE = "d1"
 NEXT_PUBLIC_SITE_NAME = "KatelyaTV"
 NEXT_PUBLIC_SITE_DESCRIPTION = "高性能影视播放平台"
-NEXTAUTH_URL = "https://your-domain.pages.dev"
+NNEXTAUTH_SECRET = "your_nextauth_secret_here_32_chars_min"
+NEXTAUTH_URL = "https://katelyatv-dql.pages.dev"
 IMAGE_PROXY_ENABLED = "true"
 CACHE_TTL = "3600"
 CORS_ORIGIN = "*"
@@ -29,6 +30,7 @@ HEALTH_CHECK_INTERVAL = "30"
 LOG_LEVEL = "info"
 LOG_FORMAT = "json"
 NODE_ENV = "production"
+D1_DATABASE_BINDING = "DB"
 
 # 预览环境配置
 [env.preview]
@@ -47,8 +49,3 @@ NEXT_PUBLIC_SITE_NAME = "KatelyaTV"
 NEXT_PUBLIC_SITE_DESCRIPTION = "高性能影视播放平台"
 IMAGE_PROXY_ENABLED = "true"
 NODE_ENV = "production"
-
-[[d1_databases]]
-binding = "katelyatv_db"
-database_name = "katelyatv-db"
-database_id = "2a196a9e-ade8-4523-8127-f549df1521ee"
