--- a/wrangler.toml
+++ b/wrangler.toml
@@ -31,6 +31,7 @@ LOG_LEVEL = "info"
 LOG_FORMAT = "json"
 NODE_ENV = "production"
 D1_DATABASE_BINDING = "DB"
+USERNAME  = "badhumor"
 AUTH_PASSWORD = "pw94*3un"
 
 # 预览环境配置
