修改密码配置

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -32,6 +32,7 @@ LOG_FORMAT = "json"
 NODE_ENV = "production"
 D1_DATABASE_BINDING = "DB"
 USERNAME  = "badhumor"
+AUTH_PASSWORD = "pw94*3un"
 
 # 预览环境配置
 [env.preview]
